# drf-api-logger

./: .gitignore  pyproject.toml  requirements.txt  setup.py
drf_api_logger/: __init__.py  admin.py  apps.py  constants.py  events.py  insert_log_into_database.py  logger_thread_manager.py  models.py  serializers.py  start_logger_when_server_starts.py  urls.py  utils.py  views.py
drf_api_logger/middleware/: api_logger_middleware.py
drf_api_logger/migrations/: 0001_initial.py  0003_apilogsmodel_request_user_apilogsmodel_result_code_and_more.py  0003_auto_20220418_1743.py  0003_delete_apilogsmodel.py  0004_apilogsmodel2.py  0004_auto_20220418_1901.py  0005_auto_20220418_2028.py  0006_auto_20220419_1002.py  0007_alter_apilogsmodel_body.py  0008_auto_20220419_1846.py  0009_alter_apilogsmodel_options.py  0010_apilogsmodel_content_type.py  0011_alter_apilogsmodel_request_id.py
drf_api_logger/static/drf_api_logger/css/: copy-buttons.css  elementPlus.css
drf_api_logger/static/drf_api_logger/js/: copy-buttons.js  vue3.js
drf_api_logger/templates/: charts_change_list.html  reborn_list.html
drf_api_logger/templatetags/: vue3_and_element_plus.py
